[project]
name = "pychangelog"
license = { text = "GPL-3.0-or-later" }
version = "0.1.0"
description = "A Python script that can generate a changelog from your Github issues and pull requests, filtering and organizing them by tag."
authors = [
    { name = "RERO+", email = "software@rero.ch"}
]

requires-python = "^3.9"

dependencies = [
    "PyGithub>=1.55",
    "click>=8.1.2"
]

[tool.poetry.group.dev.dependencies]
ipython = ">=8.2.0"

[build-system]
requires = ["poetry>=2.0.0"]
build-backend = "poetry.masonry.api"
